syntax = "proto3";

option csharp_namespace = "PlanetoidGen.API";

package tile_generation_info;

message TileGenerationModel {
    double longtitude = 1;
    double latitude = 2;
    int32 LOD = 3;
}

message TileGenerationArrayModel {
    int32 planetoidId = 1;
    repeated TileGenerationModel tileGenerationInfos = 2;
}
